force-app/main/default/objects/Region_Commerce_Map__mdt/Region_Commerce_Map__mdt.object-meta.xml
<CustomObject>
    <description>Maps an FSG region to the OOTB Commerce Market, Buyer Group, Entitlement Policy, Price Book, and merchandising queue. Prefer this over hard-coded Flow values.</description>
    <label>Region Commerce Map</label>
    <pluralLabel>Region Commerce Maps</pluralLabel>
</CustomObject>