force-app/main/default/objects/Region_Commerce_Map__mdt/fields/Buyer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Group_Name__c</fullName>
    <label>Buyer Group Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>