force-app/main/default/objects/Region_Commerce_Map__mdt/fields/Entitlement_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Policy_Name__c</fullName>
    <label>Entitlement Policy Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>