force-app/main/default/objects/Region_Commerce_Map__mdt/fields/Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Name__c</fullName>
    <label>Commerce Market Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>