force-app/main/default/objects/Region_Commerce_Map__mdt/fields/Merchandising_Queue_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_Queue_Dev_Name__c</fullName>
    <label>Merchandising Queue Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>