force-app/main/default/objects/Region_Commerce_Map__mdt/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <label>Price Book Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>