force-app/main/default/objects/Region_Commerce_Map__mdt/fields/Public_Group_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Dev_Name__c</fullName>
    <label>Public Group Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>