force-app/main/default/objects/Region_Commerce_Map__mdt/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <label>Region Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>